
The default error handler is now the `SeekToCurrentErrorHandler` for record listeners and `RecoveringBatchErrorHandler` for batch listeners.
See <<error-handlers>> for more information.

You can now control the level at which exceptions intentionally thrown by standard error handlers are logged.
See <<error-handlers>> for more information.

The `getAssignmentsByClientId()` method has been added, making it easier to determine which consumers in a concurrent container are assigned which partition(s).
See <<container-props>> for more information.

[[x25-template]]
==== KafkaTemplate Changes

The `KafkaTemplate` can now maintain micrometer timers.
See <<micrometer>> for more information.

The `KafkaTemplate` can now be configured with `ProducerConfig` properties to override those in the producer factory.
See <<kafka-template>> for more information.

A `RoutingKafkaTemplate` has now been provided.
See <<routing-template>> for more information.

You can now use `KafkaSendCallback` instead of `ListenerFutureCallback` to get a narrower exception, making it easier to extract the failed `ProducerRecord`.
See <<kafka-template>> for more information.

[[x25-string-serializer]]
==== Kafka String Serializer/Deserializer

New `ToStringSerializer`/`StringDeserializer` s as well as an associated `SerDe` are now provided.
See <<string-serde>> for more information.

[[x25-json-deser]]
==== JsonDeserializer

The `JsonDeserializer` now has more flexibility to determine the deserialization type.
See <<serdes-type-methods>> for more information.

[[x25-testing]]
==== Testing Changes

The `KafkaTestUtils.consumerProps()` helper record now sets `ConsumerConfig.AUTO_OFFSET_RESET_CONFIG` to `earliest` by default.
See <<junit>> for more information.