@@ -1,5 +1,5 @@
 /*
- * Copyright 2019 the original author or authors.
+ * Copyright 2019-2020 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,6 +17,9 @@
 package org.springframework.kafka.support.serializer;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.spy;
+import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.verify;
 
 import java.util.Collections;
 import java.util.HashMap;
@@ -93,6 +96,19 @@ public class DelegatingSerializationTests {
 		assertThat(serialized).isEqualTo(new byte[] { 'b', 'a', 'r' });
 		assertThat(deserializer.deserialize("foo", headers, serialized)).isEqualTo("bar");
 
+		// implicit Serdes
+		headers.remove(DelegatingSerializer.SERIALIZATION_SELECTOR);
+		DelegatingSerializer spySe = spy(serializer);
+		serialized = spySe.serialize("foo", headers, 42L);
+		serialized = spySe.serialize("foo", headers, 42L);
+		verify(spySe, times(1)).trySerdes(42L);
+		assertThat(headers.lastHeader(DelegatingSerializer.SERIALIZATION_SELECTOR).value())
+				.isEqualTo(Long.class.getName().getBytes());
+		DelegatingDeserializer spyDe = spy(deserializer);
+		assertThat(spyDe.deserialize("foo", headers, serialized)).isEqualTo(42L);
+		spyDe.deserialize("foo", headers, serialized);
+		verify(spyDe, times(1)).trySerdes(Long.class.getName());
+
 		// The DKHM will jsonize the value; test that we ignore the quotes
 		MessageHeaders messageHeaders = new MessageHeaders(
 				Collections.singletonMap(DelegatingSerializer.SERIALIZATION_SELECTOR, "string"));
@@ -102,6 +118,18 @@ public class DelegatingSerializationTests {
 		serialized = serializer.serialize("foo", headers, "bar");
 		assertThat(serialized).isEqualTo(new byte[] { 'b', 'a', 'r' });
 		assertThat(deserializer.deserialize("foo", headers, serialized)).isEqualTo("bar");
+
+	}
+
+	@Test
+	void testBadIncomingOnlyOnce() {
+		DelegatingDeserializer spy = spy(new DelegatingDeserializer());
+		Headers headers = new RecordHeaders();
+		headers.add(new RecordHeader(DelegatingSerializer.SERIALIZATION_SELECTOR, "junk".getBytes()));
+		byte[] data = "foo".getBytes();
+		assertThat(spy.deserialize("foo", headers, data)).isSameAs(data);
+		spy.deserialize("foo", headers, data);
+		verify(spy, times(1)).trySerdes("junk");
 	}
 
 }
